# rustafarian

./: .azure-pipelines.yml  .editorconfig  .envrc  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Pipfile  README.md  build.rs  environment.yml  pyproject.toml  shell.nix
.ci/: azure-steps.yml  deploy_to_pypi.sh
.circleci/: config.yml
package/rustafarian/: __init__.py
rustafarian/: __init__.py  cli.py
src/: lib.rs
tests/: test_get_42.py
