[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.poetry]
name = "rustafarian"
version = "0.0.0"
description = "Rust+Python with PyO3"
authors = ["Roberto Di Remigio <roberto.diremigio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
maturin = "^0.7"
pytest = "^5.3"
